// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderLine/>  image loaded FALSE 1`] = `
<styled.img
  ready={false}
>
  <img
    className="sc-hKgILt eWzGPJ"
  />
</styled.img>
`;

exports[`<HeaderLine/>  image loaded FALSE 2`] = `
<styled.div
  ready={false}
>
  <div
    className="sc-dlfnbm fYocxX"
  />
</styled.div>
`;

exports[`<HeaderLine/>  image loaded TRUE 1`] = `
<styled.img
  ready={true}
>
  <img
    className="sc-hKgILt eMAJxy"
  />
</styled.img>
`;

exports[`<HeaderLine/>  image loaded TRUE 2`] = `
<styled.div
  ready={true}
>
  <div
    className="sc-dlfnbm gfLnow"
  />
</styled.div>
`;

exports[`<HeaderLine/>  renders correctly 1`] = `
<ImageContainer
  url="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png"
>
  <ErrorBoundary>
    <styled.img
      loading="lazy"
      ready={false}
      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png"
    >
      <img
        className="sc-hKgILt eWzGPJ"
        loading="lazy"
        src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png"
      />
    </styled.img>
    <styled.div
      ready={false}
    >
      <div
        className="sc-dlfnbm fYocxX"
      />
    </styled.div>
  </ErrorBoundary>
</ImageContainer>
`;
